Fixed nugget title overflow problem

--- a/src/styles/layout/_nugget_table_view_layout.sass
+++ b/src/styles/layout/_nugget_table_view_layout.sass
@@ -16,6 +16,10 @@
         .cell
           display: grid
           align-items: center
+          p
+            overflow: hidden
+            white-space: nowrap
+            text-overflow: ellipsis
           &.notification
             justify-items: center
             img
